# software-design-simulator

./: README.md  pyproject.toml
simulator/: __init__.py  cli.py  expression.py  project.py
tests/: test_expression.py  test_project.py
