[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "software-design-simulator"
version = "0.1.0"
description = "A minimal simulator for software engineering projects."
authors = [{name = "Example", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["simulation", "software-engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
simulate-project = "simulator.cli:main"
